production/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
  namespace: portfolio-production
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      imagePullSecrets:
        - name: nexus-secret

      terminationGracePeriodSeconds: 30

      containers:
      - name: portfolio-backend
        image: registry.praveeninfra.online/docker-private/portfolio-backend:v7
        ports:
        - containerPort: 8000

        volumeMounts:
        - name: uploads
          mountPath: /uploads

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 15

        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]

      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: blog-uploads-pvc
