production/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-service
  namespace: portfolio-production
spec:
  type: NodePort
  selector:
    app: portfolio-backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 32081
